--- a/sample2.org
+++ b/sample2.org
@@ -6,14 +6,18 @@ adsf vcxzvzxcv cxvafev qeverv ervq erv erverv sdvc dsfv sdfv sdfv sfdv
 sdfv dsfv dfv sfdv fdv efv fev wefvsfv dfv dfvdfv fedvdfv fedvdewv efv
 efvwev efve 
 * 029834
-#+BEGIN_SRC emacs-lisp :export both
+#+BEGIN_SRC emacs-lisp :export both :results output drawer
 (print "Hello Worldeeee!!")
 #+END_SRC
 
 #+RESULTS:
-: Hello World!!
+:results:
+
+"Hello Worldeeee!!"
+:end:
 
 ** poqiwe
 *** lksjdf
 **** ,mxncv
 ...
+
