--- a/sample2.org
+++ b/sample2.org
@@ -6,14 +6,13 @@ adsf vcxzvzxcv cxvafev qeverv ervq erv erverv sdvc dsfv sdfv sdfv sfdv
 sdfv dsfv dfv sfdv fdv efv fev wefvsfv dfv dfvdfv fedvdfv fedvdewv efv
 efvwev efve 
 * 029834
-#+BEGIN_SRC emacs-lisp :export both :results output org
+#+BEGIN_SRC emacs-lisp :export both :results output code
 (print "Hello Worldeeee!!")
 #+END_SRC
 
 #+RESULTS:
-#+begin_src org
-
-"Hello Worldeeee!!"
+#+begin_src emacs-lisp
+"\n\"Hello Worldeeee!!\"\n"
 #+end_src
 
 ** poqiwe
