org elisp example block

--- a/sample2.org
+++ b/sample2.org
@@ -6,12 +6,39 @@ adsf vcxzvzxcv cxvafev qeverv ervq erv erverv sdvc dsfv sdfv sdfv sfdv
 sdfv dsfv dfv sfdv fdv efv fev wefvsfv dfv dfvdfv fedvdfv fedvdewv efv
 efvwev efve 
 * 029834
-#+BEGIN_SRC emacs-lisp :export both
+#+BEGIN_SRC emacs-lisp :export both :results output
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
+(print "Hello Worldeeee!!")
 (print "Hello Worldeeee!!")
 #+END_SRC
 
 #+RESULTS:
-: Hello Worldeeee!!
+#+begin_example
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+
+"Hello Worldeeee!!"
+#+end_example
 
 ** poqiwe
 *** lksjdf
